# Entity-Component-System

./: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json
ECSEngine/: CMakeLists.txt
ECSEngine/src/: PrimitiveTypes.h
ECSEngine/src/ECS/: Common.h  Component.cpp  Component.h  ECS.h  Entity.h  Entity.inl  IComponent.h  IPool.h  Pool.h  Registry.cpp  Registry.h  System.cpp  System.h
ECSEngine/tests/: ecs_gtest.cpp
